--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,13 @@ body {
   font-family: 'Helvetica','sans-serif';
 }
 
+/* .navbar {
+  background-color: #FFEA00;
+} */
+
 .navbar-nav.navbar-center {
   position: absolute;
-  left: 50%;
+  left: 15%;
   transform: translatex(-50%);
 }
 
@@ -40,7 +44,12 @@ body {
 }
 
 .logo-visage{
-  height: 100%;
+  height: 30em;
+  margin-bottom: 3em;
+}
+
+.visage-img-navbar {
+  height: 2em;
 }
 
 .card{
